apps/cli/src/snapshots/costroid__render__tests__snapshot_anomalies_no_usage_plain.snap
---
source: apps/cli/src/render.rs
expression: "render_anomalies(&anomalies_view_no_usage_fixture(), RenderOptions::plain())"
---
costroid anomalies
scope: API-lane spend spike + all-lane model mix vs your own recent history (estimated)
no usage recorded yet - callouts need a few days of history (estimated)
quota burn-rate anomalies need multi-day quota history, which local data does not keep - not shown.
figures are local estimates (your tokens x current prices), vs your own recent history.
