apps/cli/src/snapshots/costroid__render__tests__snapshot_budget_braille.snap
---
source: apps/cli/src/render.rs
expression: "render_budget(&budget_view_fixture(), RenderOptions::braille(false))"
---
C⠉ costroid                                   budget  ~$84.00
scope: API-lane spend this month (50% of month elapsed)
────────────────────────────────────────────────────────────────
codex  ~$60.00 / ~$50.00  ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿ 120% !! OVER
  pace: 120% used vs 50% of month elapsed (over budget)
  over by ~$10.00
────────────────────────────────────────────────────────────────
total (all tools)  ~$84.00 / ~$100.00  ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣀⣀ 84% !
  pace: 84% used vs 50% of month elapsed (ahead of pace)
────────────────────────────────────────────────────────────────
claude-code  ~$15.00 / ~$60.00  ⣿⣿⣿⣀⣀⣀⣀⣀⣀⣀⣀⣀ 25%
  pace: 25% used vs 50% of month elapsed (on track)
────────────────────────────────────────────────────────────────
cursor: flat-fee subscription - no $ budget applies (not API-billed)
────────────────────────────────────────────────────────────────
figures are local estimates (your tokens x current prices); run `costroid reconcile` to compare against the provider invoice.
