apps/cli/src/snapshots/costroid__render__tests__snapshot_forecast_braille.snap
---
source: apps/cli/src/render.rs
expression: "render_forecast(&forecast_view_projected_fixture(),\nRenderOptions::braille(false))"
---
C⠉ costroid                                   forecast  ~$37.50
scope: API-lane spend this month + quota burn (estimated)
projected ~$37.50 by Jun 30 (estimated)
spend so far ~$20.00 over 16 of 30 days (estimated)
────────────────────────────────────────────────────────────────
actual    ⠀⠀⠀⠀⣤⠀⠀⠀⠀⣿⠀⠀⠀⣤⠀⠀
projected ⠘⠘⠘⠘⠘⠘⠘⠘⠘⠘⠘⠘⠘⠘
────────────────────────────────────────────────────────────────
quota:
claude code weekly: projected to hit ~Friday (UTC, estimated)
claude code 5h: resets before you hit it (estimated)
codex weekly: ETA unavailable (no fresh verified usage reading)
────────────────────────────────────────────────────────────────
figures are local estimates (your tokens x current prices), projected - not the vendor invoice.
