apps/cli/src/snapshots/costroid__render__tests__snapshot_forecast_no_usage_ascii.snap
---
source: apps/cli/src/render.rs
expression: "render_forecast(&forecast_view_eta_unavailable_fixture(),\nRenderOptions::ascii(false))"
---
costroid                                              forecast  
scope: API-lane spend this month + quota burn (estimated)
no API usage recorded - nothing to forecast yet
----------------------------------------------------------------
quota:
claude code weekly: ETA unavailable (no fresh verified usage reading)
codex 5h: ETA unavailable (window just started)
----------------------------------------------------------------
figures are local estimates (your tokens x current prices), projected - not the vendor invoice.
